--- a/res/values-el-rGR/buttons_strings.xml
+++ b/res/values-el-rGR/buttons_strings.xml
@@ -1,9 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Button Settings -->
+    <string name="button_settings_title">Πλήκτρα</string>
+    <string name="button_settings_title_summary">Ρυθμίσεις ενεργειών πλήκτρων</string>
+    <string name="button_settings_description">Επιλέξτε τις ενέργειες των διαφόρων πλήκτρων-κουμπιών της συσκευής σας</string>
     <!-- Button brightness -->
+    <string name="button_backlight_title">Φωτισμός πλήκτρων συσκευής</string>
+    <string name="hardware_brightness_keys_title">Οπίσθιος φωτισμός</string>
+    <string name="hardware_brightness_keys_title_summary">Ενεργοποίηση οπίσθιου φωτισμού των πλήκτρων της συσκευής</string>
+    <string name="button_brightness_title">Φωτεινότητα πλήκτρων</string>
+    <string name="hardware_button_backlight_timeout">Χρόνος λήξης οπίσθιου φωτισμού πλήκτρων</string>
+    <string name="hardware_button_backlight_timeout_summary">Χρόνος λήξης οπίσθιου φωτισμού πλήκτρων (ανενεργός αν είναι 0)</string>
+    <string name="button_backlight_on_touch_only_title">Άγγιγμα πλήκτρου</string>
+    <string name="button_backlight_on_touch_only_summary">Ενεργοποιήσετε το φωτισμό με χρονικό όριο μόνο με το άγγιγμα του κουμπιού</string>
     <!-- ANBI -->
+    <string name="anbi_title">Ακούσιο άγγιγμα</string>
+    <string name="anbi_summary">Αποφυγή τυχαίου πατήματος της πλοήγησης ενώ χρησιμοποιείται η οθόνη</string>
     <!-- Buttons backlight timeout -->
+    <string name="backlight_timeout_title">Χρονικό όριο οπίσθιου φωτισμού κουμπιών</string>
+    <string name="backlight_timeout_on">Πάντα ενεργός</string>
+    <string name="backlight_timeout_3s">3 δευτερόλεπτα</string>
+    <string name="backlight_timeout_default">5 δευτ (προεπιλογή)</string>
+    <string name="backlight_timeout_10s">10 δευτερόλεπτα</string>
+    <string name="backlight_timeout_15s">15 δευτερόλεπτα</string>
+    <string name="backlight_timeout_20s">20 δευτερόλεπτα</string>
+    <string name="backlight_timeout_30s">30 δευτερόλεπτα</string>
     <!-- Buttons: Categories -->
+    <string name="home_key_title">Πλήκτρο \"Αρχική σελίδα\"</string>
+    <string name="back_key_title">Πλήκτρο επιστροφής</string>
+    <string name="menu_key_title">Πλήκτρο Μενού</string>
+    <string name="assist_key_title">Κουμπί βοήθειας</string>
+    <string name="app_switch_key_title">Πλήκτρο πρόσφατων εφαρμογών</string>
+    <string name="camera_key_title">Πλήκτρο φωτογρ. μηχανής</string>
     <!-- Buttons: Actions -->
+    <string name="short_press_title">Ενέργεια απλής πίεσης</string>
+    <string name="long_press_title">Ενέργεια παρατεταμένου πατήματος</string>
+    <string name="double_tap_title">Ενέργεια διπλού πατήματος</string>
+    <string name="action_nothing">Καμία ενέργεια</string>
+    <string name="action_menu">Άνοιγμα/κλείσιμο μενού</string>
+    <string name="action_app_switch">Πρόσφατα</string>
+    <string name="action_search">Βοηθός αναζήτησης</string>
+    <string name="action_voice_search">Φωνητική αναζήτηση</string>
+    <string name="action_in_app_search">Αναζήτηση μέσα στην εφαρμογή</string>
+    <string name="action_launch_camera">Άνοιγμα της κάμερας</string>
+    <string name="action_last_app">Άνοιγμα τελευταίας εφαρμογής</string>
+    <string name="action_splitscreen">Διαχωρισμός οθόνης</string>
+    <string name="volume_key_title">Πλήκτρα έντασης</string>
+    <string name="volume_answer_call_title">Απάντηση κλήσης</string>
+    <string name="volume_answer_call_summary">Απάντηση κλήσης με το πλήκτρο έντασης επάνω, εάν η απόρριψη είναι ενεργή, ή με οποιοδήποτε, αν είναι κλειστή</string>
+    <string name="volume_reject_call_title">Απόρριψη κλήσης</string>
+    <string name="volume_reject_call_summary">Απόρριψη κλήσης με το πλήκτρο έντασης επάνω, εάν η απόρριψη είναι ενεργή, ή με οποιοδήποτε, αν είναι κλειστή</string>
+    <string name="volume_end_call_title">Τερματισμός κλήσης</string>
+    <string name="volume_end_call_summary">Τέλος ενεργής κλήσης</string>
+    <string name="volume_button_music_control_title">Έλεγχος πολυμέσων</string>
+    <string name="volume_button_music_control_summary">Παρατεταμένο πάτημα, ελέγχει την αναπαραγωγή μέσων, όταν η οθόνη είναι σβηστή</string>
 </resources>
