--- a/res/values-et-rEE/app_profile_strings.xml
+++ b/res/values-et-rEE/app_profile_strings.xml
@@ -1,2 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"></resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="app_profile_title">Programmi profiil</string>
+    <string name="app_profile_restricted_title">Piiratud</string>
+    <string name="app_profile_restricted_summary">Selle rakenduse piiramine taustal</string>
+    <string name="app_profile_performance_title">Toimimisprofiil</string>
+    <string name="app_profile_thermal_title">Temperatuuri profiil</string>
+    <string name="app_profile_brightness_title">Ekraani heledus</string>
+    <string name="app_profile_camera_hal1_title">Camera API 1</string>
+    <string name="app_profile_camera_hal1_summary">Kasutage selles rakenduses kaamera jaoks API V1</string>
+    <string name="performance_default">Vaikimisi</string>
+    <string name="performance_balance">Tasakaalustatud</string>
+    <string name="performance_battery">Aku</string>
+    <string name="performance_performance">Jõudlus</string>
+    <string name="performance_gaming">Mäng</string>
+    <string name="performance_camera">Kaamera</string>
+    <string name="thermal_default">Vaikimisi</string>
+    <string name="thermal_balance">Tasakaalustatud</string>
+    <string name="thermal_performance">Jõudlus</string>
+    <string name="thermal_gaming">Mäng</string>
+    <string name="thermal_gaming2">Mäng 2 (PUBG HD)</string>
+    <string name="thermal_nolimits">Piiranguteta</string>
+    <string name="thermal_high">Kõrge</string>
+    <string name="thermal_camera">Kaamera</string>
+    <string name="thermal_reader">Lugeja</string>
+    <string name="thermal_cool">Lahe</string>
+    <string name="thermal_incall">Sisenev kõne</string>
+    <string name="thermal_vr">VR</string>
+    <string name="brightness_default">Vaikimisi</string>
+    <string name="brightness_reduced">Vähendatud automaatne</string>
+    <string name="brightness_quarter">25\% automaatsest</string>
+    <string name="brightness_full">Täielik</string>
+    <string name="brightness_10">10\%</string>
+    <string name="brightness_20">20\%</string>
+    <string name="brightness_30">30\%</string>
+    <string name="brightness_40">40\%</string>
+    <string name="brightness_50">50\%</string>
+    <string name="brightness_60">60\%</string>
+    <string name="brightness_70">70\%</string>
+    <string name="brightness_80">80\%</string>
+    <string name="brightness_90">90\%</string>
+    <string name="app_profile_pinned_title">Esile tõstetud</string>
+    <string name="app_profile_pinned_summary">Mäluhaldur ei sulge passiivsuse tõttu rakendust</string>
+    <string name="app_profile_disable_twl_title">Keela ajutine valge nimekiri</string>
+    <string name="app_profile_disable_twl_summary">Energia säästmiseks keela sissetulevate teadete lubamine valgetes nimekirjades</string>
+    <string name="app_profile_reader_title">Lugemisrežiim</string>
+    <string name="app_profile_reader_summary">Laske CPU-l magada selle rakenduse töötamise ajal</string>
+    <string name="app_profile_fps_title">Kuva kaadrisagedus</string>
+</resources>
