--- a/res/values-ru-rRU/app_profile_strings.xml
+++ b/res/values-ru-rRU/app_profile_strings.xml
@@ -1,2 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"></resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="app_profile_title">Профиль приложения</string>
+    <string name="app_profile_restricted_summary">Ограничить приложение в фоновом режиме</string>
+    <string name="app_profile_performance_title">Профиль производительности</string>
+    <string name="app_profile_thermal_title">Профиль температурного режима</string>
+    <string name="app_profile_brightness_title">Яркость экрана</string>
+    <string name="app_profile_camera_hal1_title">Camera API 1</string>
+    <string name="app_profile_camera_hal1_summary">Принудительно использовать Camera API V1 для этого приложения</string>
+    <string name="performance_default">По умолчанию</string>
+    <string name="performance_balance">Сбалансированный</string>
+    <string name="performance_battery">Энергосбережение</string>
+    <string name="performance_performance">Производительность</string>
+    <string name="performance_gaming">Игровой</string>
+    <string name="performance_camera">Камера</string>
+    <string name="thermal_default">По умолчанию</string>
+    <string name="thermal_balance">Сбалансированный</string>
+    <string name="thermal_performance">Производительный</string>
+    <string name="thermal_gaming">Игровой</string>
+    <string name="thermal_gaming2">Игровой (PUBG HD)</string>
+    <string name="thermal_nolimits">Без ограничений</string>
+    <string name="thermal_high">Высокий</string>
+    <string name="thermal_camera">Камера</string>
+    <string name="thermal_incall">В режиме разговора</string>
+    <string name="thermal_vr">VR</string>
+    <string name="brightness_default">По умолчанию</string>
+    <string name="brightness_reduced">Автоматическая (уменьшенная)</string>
+    <string name="brightness_quarter">Автоматическая (четверть)</string>
+    <string name="brightness_full">Полная</string>
+    <string name="brightness_10">10\%</string>
+    <string name="brightness_20">20\%</string>
+    <string name="brightness_30">30\%</string>
+    <string name="brightness_40">40\%</string>
+    <string name="brightness_50">50\%</string>
+    <string name="brightness_60">60\%</string>
+    <string name="brightness_70">70\%</string>
+    <string name="brightness_80">80\%</string>
+    <string name="brightness_90">80\%</string>
+    <string name="app_profile_pinned_title">Прикреплено</string>
+    <string name="app_profile_disable_twl_title">Отключить температурный белый список</string>
+    <string name="app_profile_reader_title">Режим чтения</string>
+    <string name="app_profile_reader_summary">Разрешить отключать ЦП во время работы этого приложения</string>
+    <string name="app_profile_fps_title">Показывать частоту кадров</string>
+</resources>
