--- a/res/values-el-rGR/app_profile_strings.xml
+++ b/res/values-el-rGR/app_profile_strings.xml
@@ -1,2 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"></resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="app_profile_title">Προφίλ εφαρμογής</string>
+    <string name="app_profile_restricted_title">Περιορισμένη πρόσβαση</string>
+    <string name="app_profile_restricted_summary">Περιορισμός αυτής της εφαρμογής στο παρασκήνιο</string>
+    <string name="app_profile_performance_title">Προφίλ επιδόσεων</string>
+    <string name="app_profile_thermal_title">Θερμικό προφίλ</string>
+    <string name="app_profile_brightness_title">Φωτεινότητα οθόνης</string>
+    <string name="app_profile_camera_hal1_title">API 1 φωτογραφικής μηχανής</string>
+    <string name="app_profile_camera_hal1_summary">Επιβολή χρήσης API 1 γι\' αυτή την εφαρμογή</string>
+    <string name="performance_default">Προεπιλογή</string>
+    <string name="performance_balance">Ισορροπημένο</string>
+    <string name="performance_battery">Μπαταρία</string>
+    <string name="performance_performance">Επιδόσεις</string>
+    <string name="performance_gaming">Λειτ. παιχνιδιού</string>
+    <string name="performance_camera">Φωτογραφική μηχανή</string>
+    <string name="thermal_default">Προεπιλογή</string>
+    <string name="thermal_balance">Ισορροπημένο</string>
+    <string name="thermal_performance">Επιδόσεις</string>
+    <string name="thermal_gaming">Λειτ. παιχνιδιού</string>
+    <string name="thermal_gaming2">Λειτ. παιχνιδιού 2 (PUBG HD)</string>
+    <string name="thermal_nolimits">Χωρίς όρια</string>
+    <string name="thermal_high">Υψηλή</string>
+    <string name="thermal_camera">Φωτογραφική μηχανή</string>
+    <string name="thermal_reader">Αναγνώστης</string>
+    <string name="thermal_cool">Ψυχρή</string>
+    <string name="thermal_incall">Κατά την κλήση</string>
+    <string name="thermal_vr">VR</string>
+    <string name="brightness_default">Προεπιλογή</string>
+    <string name="brightness_reduced">Αυτόματη προσαρμογή</string>
+    <string name="brightness_quarter">Αυτόματος διαχωρισμός</string>
+    <string name="brightness_full">Πλήρης</string>
+    <string name="brightness_10">10\%</string>
+    <string name="brightness_20">20\%</string>
+    <string name="brightness_30">30\%</string>
+    <string name="brightness_40">40\%</string>
+    <string name="brightness_50">50\%</string>
+    <string name="brightness_60">60\%</string>
+    <string name="brightness_70">70\%</string>
+    <string name="brightness_80">80\%</string>
+    <string name="brightness_90">90\%</string>
+    <string name="app_profile_pinned_title">Καρφιτσωμένο</string>
+    <string name="app_profile_pinned_summary">Να μην κλείσει η διαχείριση μνήμης</string>
+    <string name="app_profile_disable_twl_title">Απενεργοποίηστε προσωρινά την λευκή λίστα</string>
+    <string name="app_profile_disable_twl_summary">Απενρ/ση της προσωρινής λίστας, σε εισερχόμενες ειδοποιήσεις</string>
+    <string name="app_profile_reader_title">Λειτουργία ανάγνωσης</string>
+    <string name="app_profile_reader_summary">Να επιτρέπεται ο ύπνος του επεξεργαστή όταν αυτή η εφαρμογή τρέχει</string>
+    <string name="app_profile_fps_title">Εμφάνιση κλίμακας frame</string>
+</resources>
