--- a/res/values-el-rGR/switch_bar_strings.xml
+++ b/res/values-el-rGR/switch_bar_strings.xml
@@ -1,2 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"></resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="switch_on_text">Ενεργό</string>
+    <string name="switch_off_text">Ανενεργό</string>
+</resources>
