--- a/res/values-et-rEE/buttons_strings.xml
+++ b/res/values-et-rEE/buttons_strings.xml
@@ -1,9 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Button Settings -->
+    <string name="button_settings_title">Nupud</string>
+    <string name="button_settings_title_summary">Kohandatud nupuga toimingud</string>
+    <string name="button_settings_description">Seadistage kohandatud nupu toimingud mitmetele teie seadmes kuvatavatele riistvaraklahvidele.</string>
     <!-- Button brightness -->
+    <string name="button_backlight_title">Riistvara nuppude taustvalgus</string>
+    <string name="hardware_brightness_keys_title">Taustvalgus</string>
+    <string name="hardware_brightness_keys_title_summary">Luba juhtnuppude taustvalgus</string>
+    <string name="button_brightness_title">Taustvalgustuse heledus</string>
+    <string name="hardware_button_backlight_timeout">Juhtnuppude taustvalgustuse taimaut</string>
+    <string name="hardware_button_backlight_timeout_summary">Juhtnuppude taustvalgustuse taimaut (keelamiseks valige 0)</string>
+    <string name="button_backlight_on_touch_only_title">Lülitage sisse vajutades</string>
+    <string name="button_backlight_on_touch_only_summary">Taustvalgustuse lubamine taimaudiga ainult nupuvajutusega</string>
     <!-- ANBI -->
+    <string name="anbi_title">Kaitse juhuslike puudutuste eest</string>
+    <string name="anbi_summary">Kaitse ekraani juhuslike puudutuste eest riistanuppudega töötamisel</string>
     <!-- Buttons backlight timeout -->
+    <string name="backlight_timeout_title">Nuppude taustavalguse taimaut</string>
+    <string name="backlight_timeout_on">Lubatud alati</string>
+    <string name="backlight_timeout_3s">3 sek.</string>
+    <string name="backlight_timeout_default">5 sek. (vaikimisi)</string>
+    <string name="backlight_timeout_10s">10 sek.</string>
+    <string name="backlight_timeout_15s">15 sek.</string>
+    <string name="backlight_timeout_20s">20 sek.</string>
+    <string name="backlight_timeout_30s">30 sek.</string>
     <!-- Buttons: Categories -->
+    <string name="home_key_title">Avalehe nupp</string>
+    <string name="back_key_title">Tagasi nupp</string>
+    <string name="menu_key_title">Menüü nupp</string>
+    <string name="assist_key_title">Abinupp</string>
+    <string name="app_switch_key_title">Hiljutiste nupp</string>
+    <string name="camera_key_title">Kaamera nupp</string>
     <!-- Buttons: Actions -->
+    <string name="short_press_title">Lühikese vajutuse toiming</string>
+    <string name="long_press_title">Pika vajutuse toiming</string>
+    <string name="double_tap_title">Topeltvajutuse toiming</string>
+    <string name="action_nothing">Tegevus puudub</string>
+    <string name="action_menu">Ava/sulge menüü</string>
+    <string name="action_app_switch">Hiljutised</string>
+    <string name="action_search">Otsinguabiline</string>
+    <string name="action_voice_search">Häälotsing</string>
+    <string name="action_in_app_search">Rakendusesisene otsing</string>
+    <string name="action_launch_camera">Ava kaamera</string>
+    <string name="action_last_app">Käivitage viimane rakendus</string>
+    <string name="action_splitscreen">Ekraani jaotamine</string>
+    <string name="volume_key_title">Helitugevuse nupud</string>
+    <string name="volume_answer_call_title">Vasta kõnele</string>
+    <string name="volume_answer_call_summary">Vastake kõnele nupuga +, kui on sisse lülitatud Keeldu või suvalisega kui see on välja lülitatud.</string>
+    <string name="volume_reject_call_title">Kõnest keeldumine</string>
+    <string name="volume_reject_call_summary">Keelduge kõnest nupuga -, kui on sisse lülitatud Vastus või suvalisega kui see on välja lülitatud.</string>
+    <string name="volume_end_call_title">Kõne lõpetamine</string>
+    <string name="volume_end_call_summary">Lõpeta aktiivne kõne</string>
+    <string name="volume_button_music_control_title">Meedia juhtimine</string>
+    <string name="volume_button_music_control_summary">Pikk vajutus juhib multimeedia taasesitust</string>
 </resources>
