--- a/res/values-et-rEE/master_switch_preference_strings.xml
+++ b/res/values-et-rEE/master_switch_preference_strings.xml
@@ -16,4 +16,7 @@
  * limitations under the License.
  */
 -->
-<resources></resources>
+<resources>
+    <string name="switch_disable_warning_title">Hoiatus</string>
+    <string name="switch_disable_warning_message">Selle valiku välja lülitamine ilma alternatiivi lubamata võib põhjustada seadme töövõimetuse. Kas jätkata?</string>
+</resources>
