--- a/res/values-ru-rRU/buttons_strings.xml
+++ b/res/values-ru-rRU/buttons_strings.xml
@@ -1,9 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Button Settings -->
+    <string name="button_settings_title">Кнопки</string>
+    <string name="button_settings_title_summary">Назначить пользовательские действия на кнопки</string>
+    <string name="button_settings_description">Выбрать пользовательские действия для кнопок, которые есть на вашем устройстве.</string>
     <!-- Button brightness -->
+    <string name="button_backlight_title">Подсветка кнопок</string>
+    <string name="hardware_brightness_keys_title">Подсветка</string>
+    <string name="hardware_brightness_keys_title_summary">Включить подсветку кнопок</string>
+    <string name="button_brightness_title">Яркость подсветки</string>
+    <string name="hardware_button_backlight_timeout">Таймаут подсветки</string>
+    <string name="hardware_button_backlight_timeout_summary">Таймаут подсветки (0 для отключения)</string>
+    <string name="button_backlight_on_touch_only_title">Подсветка при касании</string>
+    <string name="button_backlight_on_touch_only_summary">Включать подсветку клавиш только при касании</string>
     <!-- ANBI -->
+    <string name="anbi_title">Случайное нажатие</string>
+    <string name="anbi_summary">Предотвращать нажатия кнопок навигации при касании экрана</string>
     <!-- Buttons backlight timeout -->
+    <string name="backlight_timeout_title">Таймаут подсветки</string>
+    <string name="backlight_timeout_on">Всегда включено</string>
+    <string name="backlight_timeout_3s">3 сек</string>
+    <string name="backlight_timeout_default">5 сек (по умолчанию)</string>
+    <string name="backlight_timeout_10s">10 сек</string>
+    <string name="backlight_timeout_15s">15 сек</string>
+    <string name="backlight_timeout_20s">20 сек</string>
+    <string name="backlight_timeout_30s">30 сек</string>
     <!-- Buttons: Categories -->
+    <string name="home_key_title">Кнопка «Домой»</string>
+    <string name="back_key_title">Кнопка «Назад»</string>
+    <string name="menu_key_title">Кнопка «Меню»</string>
+    <string name="assist_key_title">Кнопка «Ассистент»</string>
+    <string name="app_switch_key_title">Кнопка «Недавние»</string>
+    <string name="camera_key_title">Кнопка «Камера»</string>
     <!-- Buttons: Actions -->
+    <string name="short_press_title">Действие при коротком нажатии</string>
+    <string name="long_press_title">Действие при длинном нажатии</string>
+    <string name="double_tap_title">Действие при двойном нажатии</string>
+    <string name="action_nothing">Без действия</string>
+    <string name="action_menu">Открыть/закрыть меню</string>
+    <string name="action_app_switch">Недавние</string>
+    <string name="action_search">Поиск</string>
+    <string name="action_voice_search">Голосовой поиск</string>
+    <string name="action_in_app_search">Поиск в приложении</string>
+    <string name="action_launch_camera">Открыть камеру</string>
+    <string name="action_last_app">Запустить последнее приложение</string>
+    <string name="action_splitscreen">Разделить экран</string>
+    <string name="volume_key_title">Кнопки громкости</string>
+    <string name="volume_answer_call_title">Ответить на звонок</string>
+    <string name="volume_answer_call_summary">Ответить на вызов кнопкой «Повысить громкость», если включено «Отклонить вызов», или любой другой, если выключено</string>
+    <string name="volume_reject_call_title">Отклонить вызов</string>
+    <string name="volume_reject_call_summary">Отклонить вызов кнопкой «Понизить громкость», если включено «Ответить на звонок», или любой другой, если выключено</string>
+    <string name="volume_end_call_title">Завершить вызов</string>
+    <string name="volume_end_call_summary">Завершить активный вызов</string>
+    <string name="volume_button_music_control_title">Управление мультимедиа</string>
+    <string name="volume_button_music_control_summary">Длинное нажатие управляет воспроизведением при отключенном экране</string>
 </resources>
