--- a/res/values-ru-rRU/stats_strings.xml
+++ b/res/values-ru-rRU/stats_strings.xml
@@ -18,5 +18,31 @@
 -->
 <resources>
     <!-- About device screen, list item title. Takes the user to the screen about opting in or out of anonymous statistics. -->
+    <string name="anonymous_statistics_title">Отправлять статистику</string>
+    <string name="anonymous_statistics_warning_title">О программе</string>
+    <string name="anonymous_statistics_warning">Включение отправки статистики позволит нам собирать неперсонализованную информацию. Отправляемая информация включает уникальный идентификатор, который никак не связан с вашими личными данными.
+         Данные отправляются каждые 7 дней.\n\nЧтобы увидеть пример отправляемых данных, нажмите «Посмотреть данные».</string>
+    <string name="enable_reporting_title">Разрешить отправку отчётов</string>
+    <string name="disable_reporting_persistent">Запретить отправку отчётов</string>
+    <string name="preview_data_title">Посмотреть данные</string>
+    <string name="view_stats_title">Посмотреть статистику</string>
+    <string name="anonymous_learn_more">Подробнее</string>
+    <string name="last_report_on">Последняя отправка</string>
+    <string name="reporting_interval">Интервал отправки</string>
+    <plurals name="reporting_interval_days">
+        <item quantity="one">1 день</item>
+        <item quantity="few">%d дня</item>
+        <item quantity="many">%d дней</item>
+        <item quantity="other">%d дней</item>
+    </plurals>
+    <string name="next_report_on">Следующий отчет</string>
     <!-- Anonymous Statistics - Preview -->
+    <string name="preview_id_title">Уникальный идентификатор</string>
+    <string name="preview_device_title">Устройство</string>
+    <string name="preview_version_title">Версия</string>
+    <string name="preview_country_title">Страна</string>
+    <string name="preview_carrier_title">Оператор</string>
+    <string name="preview_romname_title">Название прошивки</string>
+    <string name="preview_romversion_title">Версия BaikalOS</string>
+    <string name="preview_buildtype_title">Тип сборки BaikalOS</string>
 </resources>
