--- a/res/values-sr-rSP/app_profile_strings.xml
+++ b/res/values-sr-rSP/app_profile_strings.xml
@@ -1,2 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"></resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="app_profile_title">Профил апликације</string>
+    <string name="app_profile_restricted_title">Ограничен</string>
+    <string name="app_profile_restricted_summary">Ограничи ову апликацију у позадини</string>
+    <string name="app_profile_performance_title">Профил перформанси</string>
+    <string name="app_profile_thermal_title">Термички профил</string>
+    <string name="app_profile_brightness_title">Осветљеност Екрана</string>
+    <string name="app_profile_camera_hal1_title">Камера API 1</string>
+    <string name="app_profile_camera_hal1_summary">Форсирај коришћење камере API V1 за ову апликацију</string>
+    <string name="performance_default">Подразумевано</string>
+    <string name="performance_balance">Избалансирано</string>
+    <string name="performance_battery">Батерија</string>
+    <string name="performance_performance">Перформансе</string>
+    <string name="performance_gaming">Играње</string>
+    <string name="performance_camera">Камера</string>
+    <string name="thermal_default">Подразумевано</string>
+    <string name="thermal_balance">Избалансирано</string>
+    <string name="thermal_performance">Перформансе</string>
+    <string name="thermal_gaming">Играње</string>
+    <string name="thermal_gaming2">Играње 2 (HD PUBG)</string>
+    <string name="thermal_nolimits">Неограничено</string>
+    <string name="thermal_high">Високо</string>
+    <string name="thermal_camera">Камера</string>
+    <string name="thermal_reader">Читач</string>
+    <string name="thermal_cool">Хладно</string>
+    <string name="thermal_incall">У Позиву</string>
+    <string name="thermal_vr">VR</string>
+    <string name="brightness_default">Подразумевано</string>
+    <string name="brightness_reduced">Смањено Ауто</string>
+    <string name="brightness_quarter">Четвртина од Ауто</string>
+    <string name="brightness_full">Пуно</string>
+    <string name="brightness_10">10%</string>
+    <string name="brightness_20">20%</string>
+    <string name="brightness_30">30%</string>
+    <string name="brightness_40">40%</string>
+    <string name="brightness_50">50%</string>
+    <string name="brightness_60">60%</string>
+    <string name="brightness_70">70%</string>
+    <string name="brightness_80">80%</string>
+    <string name="brightness_90">90%</string>
+    <string name="app_profile_pinned_title">Прикачено</string>
+    <string name="app_profile_pinned_summary">Не затварај на управљању меморијом</string>
+    <string name="app_profile_disable_twl_title">Онемогући временски бели списак</string>
+    <string name="app_profile_disable_twl_summary">Онемогући временски бели списак на долазећим обавештењима</string>
+    <string name="app_profile_reader_title">Режим Читања</string>
+    <string name="app_profile_reader_summary">Дозволи CPU спавање током функционисања ове апликације</string>
+    <string name="app_profile_fps_title">Прикажи брзину смењивања слика</string>
+</resources>
